# zuzu-rust

./: .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  INSTALL.md  Makefile  README.md  build.rs  post-install.sh  test-fixtures
.github/workflows/: test.yml
docs/historic/: bug-trivial-getter-shadows-globals.md
packaging/: build-deb.sh  zuzu-wrapper
packaging/debian/: postinst  prerm
packaging/man/: zuzu-rust-parse-files.pod  zuzu-rust-run-tests.pod  zuzu-rust-server.pod  zuzu-rust.pod  zuzu.pod
src/: ast.rs  codegen.rs  error.rs  infer.rs  lexer.rs  lib.rs  main.rs  optimizer.rs  parser.rs  runtime.rs  sema.rs  span.rs  token.rs  web.rs
src/runtime/: executor.rs
src/runtime/collection/: array.rs  bag.rs  common.rs  dict.rs  mod.rs  pairlist.rs  set.rs
src/runtime/stdlib/: archive.rs  base64.rs  bignum.rs  clib.rs  clib_ffi.c  csv.rs  db.rs  digest.rs  eval.rs  gui.rs  internals.rs  io.rs  json.rs  marshal.rs  math.rs  mod.rs  net_dns.rs  net_http.rs  net_smtp.rs  net_url.rs  proc.rs  secure.rs  string.rs  string_encode.rs  task.rs  time.rs  tui.rs  worker.rs  xml.rs  yaml.rs
src/runtime/stdlib/marshal/: cbor.rs
t/: fixtures
tests/: cli_phase6.rs  dump_ast.rs  dump_zuzu.rs  helper_binaries.rs  optimizer.rs  runtime_basic.rs  server_cli.rs  worker.rs
