[package]
name = "zuzu-rust"
version = "0.1.0"
edition = "2021"
description = "New Rust implementation track for ZuzuScript"
license = "MIT"
autobins = false

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
axum = "0.8"
bzip2 = "0.4"
flate2 = "1"
getrandom = "0.2"
hmac = "0.12"
hickory-resolver = "0.24"
libloading = "0.8.9"
libxml = "0.3"
md-5 = "0.10"
mime_guess = "2"
mysql = "25"
postgres = "0.19"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["blocking", "native-tls", "system-proxy"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rustyline = "14"
serde = "1"
serde_cbor = { version = "0.11", features = ["tags"] }
serde_json = "1"
serde_yaml = "0.9"
sha1 = "0.10"
sha2 = "0.10"
scrypt = "0.11"
tar = "0.4"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt", "rt-multi-thread", "signal", "time"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
pbkdf2 = "0.12"
ed25519-dalek = { version = "2", features = ["pkcs8", "pem"] }
p256 = { version = "0.13.2", features = ["ecdsa", "pkcs8", "pem"] }
p384 = { version = "0.13.1", features = ["ecdsa", "pkcs8", "pem"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "getrandom"] }
openssl = "0.10.79"

[lib]
name = "zuzu_rust"
path = "src/lib.rs"

[[bin]]
name = "zuzu-rust"
path = "src/main.rs"

[[bin]]
name = "zuzu-rust-parse-files"
path = "src/bin/parse_files.rs"

[[bin]]
name = "zuzu-rust-run-tests"
path = "src/bin/run_tests.rs"

[[bin]]
name = "zuzu-rust-benchmark-optimizations"
path = "src/bin/benchmark_optimizations.rs"

[[bin]]
name = "zuzu-rust-server"
path = "src/bin/server.rs"
